--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
@@ -28,6 +25,7 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "text-loader": "0.0.1",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
